# home_finanical_tools

./: Dockerfile  LICENSE  build.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.py  run_server.py  setup.py
home_financial_tools/entry_points/: invoice.py
home_financial_tools/pdf/: invoice.py
home_financial_tools/server/: auth.py  config.py  db.py  exceptions.py  main.py  router.py
home_financial_tools/webgui/: index.html  login.html  test_auth.html
sample/: config.yaml  records.sqlite
